--- a/practica02/css/estilos.css
+++ b/practica02/css/estilos.css
@@ -27,6 +27,11 @@ header nav ul li{
 
 	/* text-decoration: underline; */
 }
+#bgoffer{
+	position: relative;
+	top:-408px;
+	left: -35px;
+}
 #granthams{
 	margin-left: 25px;
 	margin-top: 25px;
@@ -35,3 +40,51 @@ header nav ul li{
 	float: right;
 
 }
+#primerSeccion{
+	margin-top: 60px;
+	height: 318px;
+	margin-top: 60px;
+}
+#primerSeccion article {
+	display: inline-block;
+	vertical-align: top;
+}
+#secc01art01{
+	margin-left: 30px;
+	width: 60% ;
+
+}
+#secc01art02{
+	margin-left: 50px;
+	width: 30% ;
+	
+}
+#secc01art02 ul{
+	list-style:none ;
+	margin-left: -40px;	
+}
+#secc01art02 ul li:before{
+	content: "•";
+	color: #FF0099;
+}
+#segundaSeccion article{
+	text-align: right;
+	margin-right:  165px;
+}
+.colorrosa{
+	color: #FF0099;
+
+}
+.letragrande{
+	font-size: 3.5em;
+}
+.letramediana{
+	font-size: 2em;
+}
+.nito{
+	font-weight: bold ; 
+}
+
+
+
+
